--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/CourseWork-WebProgramming/course_work#readme",
   "dependencies": {
-    "parcel-bundler": "^1.12.5",
-    "sass": "^1.42.1"
+    "parcel-bundler": "^1.12.5"
+  },
+  "devDependencies": {
+    "sass": "^1.43.2"
   }
 }
