--- a/package.json
+++ b/package.json
@@ -1,27 +1,39 @@
 {
-  "name": "course_work",
-  "version": "1.0.0",
-  "description": "This project is about the schedule of classes for all groups in my faculty.",
-  "main": "index.js",
+  "name": "schedule-app",
+  "version": "0.0.0",
   "scripts": {
-    "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html"
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/CourseWork-WebProgramming/course_work.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/CourseWork-WebProgramming/course_work/issues"
-  },
-  "homepage": "https://github.com/CourseWork-WebProgramming/course_work#readme",
+  "private": true,
   "dependencies": {
-    "parcel-bundler": "^1.12.5"
+    "@angular/animations": "~13.0.0",
+    "@angular/common": "~13.0.0",
+    "@angular/compiler": "~13.0.0",
+    "@angular/core": "~13.0.0",
+    "@angular/forms": "~13.0.0",
+    "@angular/platform-browser": "~13.0.0",
+    "@angular/platform-browser-dynamic": "~13.0.0",
+    "@angular/router": "~13.0.0",
+    "rxjs": "~7.4.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "sass": "^1.43.2"
+    "@angular-devkit/build-angular": "~13.0.2",
+    "@angular/cli": "~13.0.2",
+    "@angular/compiler-cli": "~13.0.0",
+    "@types/jasmine": "~3.10.0",
+    "@types/node": "^12.11.1",
+    "jasmine-core": "~3.10.0",
+    "karma": "~6.3.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.0.3",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "~1.7.0",
+    "typescript": "~4.4.3"
   }
 }
